Add Content folder

--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -1,1 +1,17 @@
-Hello invoice!
+<!DOCTYPE html>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <link href="site.css" rel="stylesheet">
+  <script src="index.js"></script>
+  <title>Money money</title>
+</head>
+
+<body>
+  <div>
+    <div id="container" class="container"></div>
+  </div>
+</body>
+
+</html>
