Add Upload module

--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div>
-    <div id="container" class="container"></div>
+    <div id="container" class="container">
+      <input type="file" id="fileinput" />
+    </div>
   </div>
 </body>
 
