--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <link href="site.css" rel="stylesheet">
+  <script src="jquery-1.6.4.min.js"></script>
+  <script src="jquery.signalR-2.2.2.min.js"></script>
   <script src="index.js"></script>
   <title>Money money</title>
 </head>
