Use vue.js to display expenses

--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -6,18 +6,24 @@
   <link href="site.css" rel="stylesheet">
   <script src="jquery-1.6.4.min.js"></script>
   <script src="jquery.signalR-2.2.2.min.js"></script>
-  <script src="index.js"></script>
   <title>Money money</title>
 </head>
 
 <body>
-  <div>
-    <div id="container" class="container">
-      <div id="drop_zone" ondrop="drop_handler(event);" ondragover="dragover_handler(event);" ondragend="dragend_handler(event);">
-        <strong>Drag one or more files to this Drop Zone ...</strong>
-      </div>
+  <div id="container" class="container">
+    <div id="drop_zone" ondrop="drop_handler(event);" ondragover="dragover_handler(event);" ondragend="dragend_handler(event);">
+      <strong>Drag one or more files to this Drop Zone ...</strong>
     </div>
   </div>
+  <div id="app">
+    <ol>
+      <li v-for="expense in expenses">
+        {{ expense }}
+      </li>
+    </ol>
+  </div>
+  <script src="https://unpkg.com/vue"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
