--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -12,12 +12,12 @@
 <body>
   <div id="container" class="container">
     <div id="drop_zone" ondrop="drop_handler(event);" ondragover="dragover_handler(event);" ondragend="dragend_handler(event);">
-      <strong>Drag one or more files to this Drop Zone ...</strong>
     </div>
   </div>
   <div id="app">
+    <input v-model="filter">
     <ol>
-      <li v-for="expense in expenses">
+      <li v-for="expense in filtered(expenses, filter)">
         {{ expense }}
       </li>
     </ol>
