--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -18,7 +18,7 @@
     <input v-model="filter">
     <ol>
       <li v-for="expense in filtered(expenses, filter)">
-        {{ expense.Description }}
+        {{ expense.Description }} {{ expense.Amount }}
       </li>
     </ol>
     <span>{{totalSum(expenses, filter)}}</span>
