--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -18,10 +18,10 @@
     <input v-model="filter">
     <ol>
       <li v-for="expense in filtered(expenses, filter)">
-        {{ expense.Description }} {{ expense.Amount }}
+        {{ expense.Description }} {{ expense.Amount.toLocaleString('sv-SE') }}
       </li>
     </ol>
-    <span>{{totalSum(expenses, filter)}}</span>
+    <span>{{ totalSum(expenses, filter).toLocaleString('sv-SE') }}</span>
   </div>
   <script src="https://unpkg.com/vue"></script>
   <script src="index.js"></script>
