--- a/InvoiceParser.Web/Content/index.html
+++ b/InvoiceParser.Web/Content/index.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-  <div id="container" class="container">
-    <div id="drop_zone" ondrop="drop_handler(event);" ondragover="dragover_handler(event);" ondragend="dragend_handler(event);">
-    </div>
-  </div>
   <div id="app">
+    <div id="drop_zone" @drop="drop" @dragover="dragover" @dragend="dragEnd"></div>
     <input v-model="filter">
     <ol>
       <li v-for="expense in filtered(expenses, filter)">
