--- a/Money.Web/Content/index.html
+++ b/Money.Web/Content/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
   <link href="site.css" rel="stylesheet">
   <script src="jquery-1.6.4.min.js"></script>
   <script src="jquery.signalR-2.2.2.min.js"></script>
-  <title>Invoice parser</title>
+  <title>Money</title>
 </head>
 
 <body>
-  <div id="app" class="container">
+  <div id="app" v-cloak class="container">
     <div class="jumbotron" @drop="drop" @dragover="dragover" @dragend="dragEnd">
       <h1 class="display-3">Drop invoices here!</h1>
     </div>
@@ -24,7 +25,7 @@
       <div class="col-sm text-right">
         <h3>Sum
           <span class="badge badge-secondary">
-            {{ totalSum(expenses, filter).toLocaleString('sv-SE') }}
+            {{ totalSum(expenses, filter).toLocaleString('sv-SE', { style: 'currency', currency: 'SEK' }) }}
           </span>
         </h3>
       </div>
@@ -37,14 +38,16 @@
             <tr>
               <th scope="col">Date</th>
               <th scope="col">Description</th>
-              <th scope="col">Amount</th>
+              <th scope="col" class="text-right">Amount</th>
             </tr>
           </thead>
           <tbody>
             <tr v-for="expense in filtered(expenses, filter)">
-              <td>{{ expense.Date }}</td>
+              <td>{{ new Date(expense.Date).toLocaleDateString('sv-SE') }}</td>
               <td>{{ expense.Description }}</td>
-              <td>{{ expense.Amount.toLocaleString('sv-SE') }}</td>
+              <td class="text-right">
+                {{ expense.Amount.toLocaleString('sv-SE', { style: 'currency', currency: 'SEK' }) }}
+              </td>
             </tr>
           </tbody>
         </table>
