--- a/Money.Web/Content/index.html
+++ b/Money.Web/Content/index.html
@@ -24,7 +24,7 @@
           <input v-model="filter" class="form-control" placeholder="Search by description">
           <span class="input-group-btn">
             <button type="button" class="btn btn-dark" v-on:click="updateChart">Search!</button>
-            <i v-bind:class="{ invisible: hideSpinner }" class="ml-2 fa fa-spinner fa-spin align-self-center" style="font-size:24px"></i>
+            <i v-bind:class="{ invisible: hideSpinner }" class="ml-2 fa fa-refresh fa-spin align-self-center" style="font-size:24px"></i>
           </span>
         </div>
       </div>
@@ -42,6 +42,7 @@
         <table class="table">
           <thead>
             <tr>
+              <th scope="col"></th>
               <th scope="col">Date</th>
               <th scope="col">Description</th>
               <th scope="col" class="text-right">Amount</th>
@@ -49,11 +50,13 @@
           </thead>
           <tbody>
             <tr v-for="expense in expenses">
+              <td>
+                <i class="fa fa-remove" v-on:click="deleteExpense(expense.id)"></i>
+              </td>
               <td>{{ new Date(expense.date).toLocaleDateString('sv-SE') }}</td>
               <td>{{ expense.description }}</td>
               <td class="text-right">
                 {{ expense.amount.toLocaleString('sv-SE', { style: 'currency', currency: 'SEK' }) }}
-                <button type="button" class="btn btn-dark" v-on:click="deleteExpense(expense.id)">Delete</button>
               </td>
             </tr>
           </tbody>
